test/expressions/diten/returntypedottype.chpl
proc f() type {
  return complex;
}

writeln(f().type:string);
writeln(int.type:string);
